--- a/Tutorials/myfloat.kv
+++ b/Tutorials/myfloat.kv
@@ -1,7 +1,17 @@
+<Button>:
+    font_size: 12
+    size_hint: 0.12, 0.2 
+    color: 0.2, 0.5, 0.8, 1
+
+
 # parent tag
 
 <FloatLayout>:
     Button:
-        text: 'Text Me'
+        id: btn1
+        pos_hint: {"x": 0.3,"top": 0.5}
+        text: 'Text Me' if btn1.state == "normal" else "Don't" 
     Button:
-        text: 'Tonight'
+        id : eft
+        text: 'Tonight' if eft.state == 'down' else 'Hello'
+        background_color: 0.1, 0.3, 0.5, 0.9
